fix horizontal scroll on narrow screens in homepage

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -286,9 +286,8 @@ h3
     white-space: nowrap
 
   a.middle
-    margin-left: 40%
-    margin-right: 40%
-    margin-bottom: 10%
+    display: block
+    margin: 0 auto 10%
 
   a.top
     margin-top: 30px
